@@ -1,5 +1,6 @@
 package org.wicketstuff.select2;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -10,9 +11,9 @@ public enum ELOLsState {
     STATE_2,
     STATE_3;
 
-    public static final List<ELOLsState> LIST_1 = List.of(STATE_1, STATE_2);
+    public static final List<ELOLsState> LIST_1 = Arrays.asList(STATE_1, STATE_2);
 
-    public static final List<ELOLsState> LIST_2 = List.of(STATE_1, STATE_3);
+    public static final List<ELOLsState> LIST_2 = Arrays.asList(STATE_1, STATE_3);
 
-    public static final List<ELOLsState> LIST_3 = List.of(STATE_3);
+    public static final List<ELOLsState> LIST_3 = Arrays.asList(STATE_3);
 }
